feat. add api layers for invoice
- add. router, controller, service, repo layer
- mod. api address api/v1 to api
- mod. model layer for invoice history
- fix. migrate file error
- todo. add test code
- todo. update api docs
