# router/router.go
@@ -10,21 +10,28 @@ import (
 // Init ...
 func Init(e *echo.Echo, svc *service.Service) {
 	api := e.Group("/api")
-	ver := api.Group("/v1")
 
-	makeV1AuthRoute(ver, svc)
-	makeV1UserRoute(ver, svc)
+	makeV1AuthRoute(api, svc)
+	makeV1UserRoute(api, svc)
+	makeV1InvoiceRoute(api, svc)
 }
 
 func makeV1AuthRoute(ver *echo.Group, svc *service.Service) {
-	user := ver.Group("/auth")
+	auth := ver.Group("/auths")
 	authCt := ct.NewAuthController(svc.Auth)
-	user.POST("/signup", authCt.Signup)
-	user.POST("/signin", authCt.Signin)
+	auth.POST("/signup", authCt.Signup)
+	auth.POST("/signin", authCt.Signin)
 }
 
 func makeV1UserRoute(ver *echo.Group, svc *service.Service) {
-	user := ver.Group("/user")
+	user := ver.Group("/users")
 	userCt := ct.NewUserController(svc.User)
 	user.GET("/:uid", userCt.GetUser)
+}
+
+func makeV1InvoiceRoute(ver *echo.Group, svc *service.Service) {
+	invoice := ver.Group("/invoices")
+	invoiceCt := ct.NewInvoiceController(svc.Invoice)
+	invoice.GET("", invoiceCt.GetInvoices)
+	invoice.POST("", invoiceCt.NewInvoice)
 }
